# bilpakV3

./: .clang-format  .gitignore  Readme.md
newBilpakApp/: bilpak.kv  commands.js  main.py
server/: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  server_test.py
server/include/: commands.hpp  server.hpp
server/src/: commands.cpp  index.html  main.cpp  server.cpp
server/src/templates/: index.html
